--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>This is working</h1>
-    <script src="bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
